color and new icon

--- a/firebase.json
+++ b/firebase.json
@@ -8,7 +8,7 @@
   },
   "hosting": {
     "public": "build",
-    "site": "goodmorning-staging",
+    "site": "durmili",
     "ignore": [
       "firebase.json",
       "**/.*",
