--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "deploy": "yarn build && firebase deploy --only hosting:goodmorning-staging",
+    "deploy": "yarn build && firebase deploy --only hosting:durmili",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
